[tool.poetry]
name = "py-pressure-logs"
version = "0.1.0"
description = ""
authors = ["jim.berry <jim.berry@signal-ai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
argparse = "^1.4.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"
pytest = "^8.3.3"
pyinstaller = "^6.11.1"
streamlit = "^1.40.1"
streamlit-aggrid = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
